Bug 255819 - "Sort By" toolbar button does not remember the icon
Summary: "Sort By" toolbar button does not remember the icon
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.1
Platform: Debian unstable Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
: 298400 316428 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-11-01 16:12 UTC by Janet
Modified: 2013-05-10 20:31 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Janet 2010-11-01 16:12:10 UTC
Version:           unspecified (using KDE 4.5.2) 
OS:                Linux

I have put the menu like "Sort By" button into dolphin's toolbar and assigned an icon to it. But everytime I switch the sorting mode (or close and reopen dolphin) the toolbar entry is iconless again. Other buttons like e.g. the grouping button which by default is without icon too do keep the assigned icon.

Reproducible: Always




OS: Linux (i686) release 2.6.36-0.slh.2-aptosid-686
Compiler: cc
Comment 1 Peter Paulsen 2011-01-30 13:13:32 UTC
I can confirm this with dolphin 1.6 in KDE 4.6 - strange... I add the sort by menubotton to the toolbar, assign some icon to it for it hasn't a default one, close dolphin and restart it - and the icon is gone, only text for that toolbar item.
Comment 2 Francesco Cusolito 2011-09-25 22:13:45 UTC
I can also confirm this is KDE 4.7.1 
Sure this isn't a major bug, but for me that keep toolbar vertically, this isn't nice to see...

Francesco
Comment 3 Jekyll Wu 2012-04-20 01:11:29 UTC
*** Bug 298400 has been marked as a duplicate of this bug. ***
Comment 4 Thom C. 2012-07-11 06:02:03 UTC
I can confirm this in KDE 4.8.4 as well.

What I wanted to note is that the icon may reappear when doing the following:

1. Open Dolphin, add the "Sort By" action to the toolbar and assign an icon to it.
2. Close en reopen Dolphin, the icon is now gone (that is the bugreport, I know).
3. Edit the toolbar again, for example, add a separator to it. If you click "Apply", the icon magically reappears for the "Sort By" action.

This happens even when you do not actually change anything! For example, if you swap two actions in the toolbar, then swap them back and then press "Apply", you would expect nothing changes, but the icon will reappear.
Comment 5 Janet 2012-07-11 09:39:23 UTC
I had it just the other way round: "Magically" the icon stayed in the toolbar after a fresh install, so I thought it was finally fixed. But then I changed the toolbar content, switched some actions - and the icon was - and stays - gone.
Comment 6 Jeroen van Meeuwen (Kolab Systems) 2012-08-24 16:21:34 UTC
Resetting assignee to default as per bug #305719
Comment 7 Jekyll Wu 2013-03-10 02:32:22 UTC
*** Bug 316428 has been marked as a duplicate of this bug. ***
Comment 8 Frank Reininghaus 2013-03-10 17:03:45 UTC
I wasn't aware of this report until now. First I thought that this cannot be a Dolphin issue because the "Configure Toolbar" code comes from kdelibs AFAIK. However, I cannot reproduce this in Kate with the "Open With..." button, which is similar in the sense that it opens a menu and has no default icon, so maybe something can be done in Dolphin after all.

If anyone is willing to investigate this and possibly come up with a patch, that would be greatly appreciated.
Comment 9 Daniel Faust 2013-05-10 20:31:28 UTC
Git commit f12345a57ff536884d5371a5686cd57b3294262c by Daniel Faust.
Committed on 10/05/2013 at 22:27.
Pushed by dfaust into branch 'KDE/4.10'.

Don't try to change the icon of the "sort" action menu if it doesn't exist
FIXED-IN: 4.10.4
REVIEW: 109966

M  +4    -2    dolphin/src/views/dolphinviewactionhandler.cpp

http://commits.kde.org/kde-baseapps/f12345a57ff536884d5371a5686cd57b3294262c