Don't try to change the icon of the "sort" action menu if it doesn't exist

BUG: 255819
FIXED-IN: 4.10.4
REVIEW: 109966